# django-playground

./: .venv  Makefile  pyproject.toml
basic_django/: settings.py  urls.py
pages/: views.py
templates/: base.html
