[tool.poetry]
name = "django-playground"
version = "0.1.0"
description = "Simple project for testing django development"
authors = ["Elias Gill <eliasgill42@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
